# WasteSegregation

ball_detector_cpp/: CMakeLists.txt
ball_detector_cpp/install/: local_setup.sh  setup.sh
ball_detector_cpp/install/ball_detector_cpp/share/ament_index/resource_index/parent_prefix_path/: ball_detector_cpp
ball_detector_cpp/install/ball_detector_cpp/share/ball_detector_cpp/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ball_detector_cpp/install/ball_detector_cpp/share/ball_detector_cpp/cmake/: ball_detector_cppConfig.cmake
ball_detector_cpp/log/: latest_build
ball_detector_cpp/src/: ball_detector.cpp
camera_cpp_pkg/: CMakeLists.txt  package.xml
camera_cpp_pkg/src/: green_ball_filter.cpp
camera_pkg/: package.xml  setup.py
camera_pkg/camera_pkg/: coordinate_transformer.py  detect_green_ball_publisher.py  detect_green_ball_subscriber.py  transform_point_server.py
tool_changer_interface/: CMakeLists.txt  package.xml
tool_changer_interface/srv/: TransformPoint.srv
ur_cpp_pkg/: CMakeLists.txt  package.xml
ur_cpp_pkg/src/: ball_pickup_demo.cpp  get_tool_subscriber.cpp  tool_changer_success_subscriber.cpp  tool_publisher.cpp
ur_interface/: CMakeLists.txt  package.xml
ur_interface/srv/: ToolChanger.srv  TransformPoint.srv
ur_py_pkg/: package.xml  setup.cfg  setup.py
