<?xml version="1.0"?>
<package format="3">
  <name>camera_cpp_pkg</name>
  <version>0.0.0</version>
  <description>Image publisher and subscriber using OpenCV, PCL, and ROS 2</description>
  <maintainer email="jsola052@fiu.edu">robotics</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>geometry_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
